# fsv

./: .clang-format  .gitignore  LICENSE.Zlib  LICENSE.md  README.md  configure.ac  meson.build  plot_vertex.py
debug/: debug.c  meson.build
doc/: about.html  fsv.sgml
lib/: Makefile.am  meson.build
po/: fsv.pot  meson.build
src/: Makefile.am  about.c  about.h  animation.c  animation.h  callbacks.c  camera.c  camera.h  colexp.c  colexp.h  color.c  color.h  common.c  common.h  dialog.c  dialog.h  dirtree.c  dirtree.h  filelist.c  filelist.h  fsv-about-fragment.glsl  fsv-about-vertex.glsl  fsv-fragment.glsl  fsv-gresource.xml  fsv-text-fragment.glsl  fsv-text-vertex.glsl  fsv-vertex.glsl  fsv.c  fsv.h  fsv3d.h  geometry.c  geometry.h  gui.c  gui.h  meson.build  ogl.c  ogl.h  scanfs.c  scanfs.h  tmaptext.c  (+5 more)
src/xmaps/: back.xpm  birdseye_view.xpm  blockdev.xpm  button_cancel.xpm  button_ok.xpm  cd-root.xpm  cd-up.xpm  chardev.xpm  fifo.xpm  folder.xpm  fsv-icon.xpm  mini-blockdev.xpm  mini-chardev.xpm  mini-fifo.xpm  mini-folder-open.xpm  mini-folder.xpm  mini-regfile.xpm  mini-socket.xpm  mini-symlink.xpm  mini-unknown.xpm  regfile.xpm  socket.xpm  symlink.xpm  unknown.xpm
